--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 #board {
+  font-family: "Roboto", sans-serif;
   padding: 3em;
   text-align: center;
 }
@@ -7,11 +8,13 @@
   width: 302px;
   clear: both;
 }
-.tile {
+.row > div {
+  float: left;
   width: 100px;
   height: 100px;
-  float: left;
   cursor: pointer;
+  line-height: 100px;
+  font-size: 60px;
 }
 .top {
   border-bottom: 1px solid black;
@@ -24,4 +27,7 @@
 }
 .left {
   border-right: 1px solid black;
+}
+.resetBtn {
+  margin-top: 8rem;
 }
